Revert "fix: Flicker with browser resizing"
This reverts commit b91f047cbcd3eeb8b36fa3cec9b41cbea584c44b.

--- a/apps/mux/src/index.css
+++ b/apps/mux/src/index.css
@@ -1,3 +1,6 @@
+body {
+    overflow: hidden;
+}
 html,
 body,
 div {
@@ -8,9 +11,7 @@ div {
   font: inherit;
   vertical-align: baseline;
 }
-#root {
-    overflow: hidden;
-}
+
 .progress {
   margin-bottom: 16px;
   height: 12px;
